syntax = "proto2";

package gcp_pubsub;

message PubsubTransaction {
  required string id = 1;
  required string created_at = 2;
  required string timestamp = 3;
  required string signature = 4;
  required string indexing_address = 5;
  required uint64 slot = 6;
  required string signer = 7;
  required bool success = 8;
  required string version = 9;
  required uint64 fee = 10;
  required string meta = 11;
  required string message = 12;
}

message PubsubAccountUpdate {
  required string id = 1;
  required string created_at = 2;
  required string timestamp = 3;
  required string owner = 4;
  required uint64 slot = 5;
  required string pubkey = 6;
  optional string txn_signature = 7;
  optional uint64 write_version = 8;
  required uint64 lamports = 9;
  required bool executable = 10;
  required uint64 rent_epoch = 11;
  required string data = 12;
}
